<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_daily_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DailyTaskListFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/dailyTaskListDateArea">

        <ImageView
            android:id="@+id/btn_previous"
            android:layout_width="43dp"
            android:layout_height="26dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_left" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Today"
            app:layout_constraintBottom_toBottomOf="@+id/btn_previous"
            app:layout_constraintEnd_toStartOf="@+id/btn_next"
            app:layout_constraintStart_toEndOf="@+id/btn_previous"
            app:layout_constraintTop_toTopOf="@+id/btn_previous"
            app:layout_constraintVertical_bias="0.3"
            tools:text="17/05/2018"
            style="@style/dailyTaskListDateAreaText"
            />

        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="43dp"
            android:layout_height="26dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_previous"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_previous"
            app:srcCompat="@drawable/ic_arrow_right"
            />

    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="start|top"
        android:layout_marginTop="0dp"
        android:background="@color/colorDivider" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:id="@+id/et_new_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/daily_task_quick_tasks_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_add_task_to_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/MainEditText"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_add_task_to_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/et_new_task"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/et_new_task"
            app:srcCompat="@drawable/ic_playlist_add" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>